<resources>
    <string name="app_name">AppUAQ</string>
    <string name="title_location">Ver ubicación</string>
    <string name="question">Pregunta</string>
    <string name="check">Check</string>
    <string name="correct">Muy bien!</string>
    <string name="incorrect">Incorrecto...</string>
    <string name="next">Siguiente</string>
    <string name="finish">Terminada</string>
    <string name="prev">Anterior</string>
    <string name="type">Enviar</string>
    <string name="title_activity_caso">CasoActivity</string>
    <string name="caso_cl_1">Caso Clínico 1</string>
    <string name="caso_cl_2">Caso Clínico 2</string>
    <string name="caso_cl_3">Caso Clínico 3</string>
    <string name="caso_cl_4">Caso Clínico 4</string>
    <string name="caso_cl_5">Caso Clínico 5</string>
    <string name="caso_cl_6">Caso Clínico 6</string>
    <string name="caso_cl_7">Caso Clínico 7</string>
    <string name="caso_cl_8">Caso Clínico 8</string>
    <string name="caso_cl_9">Caso Clínico 9</string>
    <string name="caso_cl_10">Caso Clínico 10</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Contraseña</string>
    <string name="btn_login">INGRESAR</string>
    <string name="btn_forgot_pass">¿Olvido su contraseña?</string>
    <string name="btn_link_to_register">¿Aun no se ha registrado?¡registrese ahora mismo!</string>
    <string name="txt_signup">REGISTRAR</string>
    <string name="forgot_password">¿Olvido su contraseña?</string>
    <string name="forgot_pass_msg">Solo necesitamos el correo electrónico con el que se haya registrado, para enviarle las instrucciones de restablecimiento de contraseña.</string>
    <string name="btn_back"><![CDATA[<< REGRESAR]]></string>
    <string name="btn_reset_password">Restablecer la contraseña</string>
    <string name="minimum_password">Contraseña demasiado corta, ingrese un mínimo de 6 caracteres.</string>
    <string name="auth_failed">¡Error al autentificar!, Por favor verifique su correo electrónico y contraseña o regístrese</string>
        <string name="start_top">M 20.7 7 C 21.1 6.6 21.1 6 20.7 5.6 L 18.4 3.3 C 18 2.9 17.4 2.9 17 3.3 L 15.2 5.1 L 19 8.9</string>
        <string name="end_top">M 19.6 8 C 20 7.6 20 7 19.6 6.6 L 17.3 4.3 C 16.9 3.9 16.3 3.9 15.9 4.3 L 14.1 6.1 L 17.9 9.9</string>
    <string name="text_exploration_two">• Inspección local: Se observa presencia de edema en toda la zona de tercio medio e inferior de húmero derecho acompañado de inflamación. • Sensibilidad: Disminuida en dermatomas C6 y C7 derecho. • Reflejos: Estiloradial y tricipital disminuídos. • Goniometría: Extensión= Derecha  -10 Izquierda 0 Flexión= Derecha  120 Izquierda  150. Pronación y supinación completas. • Examen Manual Muscular: Miembro superior derecho generalizado en 3/5 en escala de Daniels. • Pruebas Específicas: Godet ( + )</string>
    <string name="text_case2">Paciente femenino de 22 años de edad de complexión ectomorfa, acude a servicio en fisioterapia derivada por médico traumatólogo con diagnóstico de fractura transversal corta en tercio distal de húmero derecho, con 9 semanas de evolución. Comenta sentir dolor 8/10 en escala numérica verbal de tipo punzante y constante localizado en cara posterior de brazo, que aumenta el movimiento y disminuye con reposo y a la aplicación de hielo. No cuenta con material de osteosíntesis, únicamente se le colocó un inmovilizador rígido, mismo que se retiró hace 1 semana.</string>
    <string name="text_exploration_one">A la palpación se encuentra presencia de bandas tensas en trapecio superior derecho que a la digito presión irradia hacia hombro. Rangos de movimiento en cuello disminuidos y fuerza generalizada 3/5 con presencia de dolor.</string>
    <string name="text_case_one">Paciente femenino de 30 años de complexión ectomorfa acude a servicio en fisioterapia refiriendo tener dolor en cuello y disminución en la movilidad articular. El dolor lo refiere 8/10 en escala verbal numérica de tipo localizado, opresivo e inconstante, que se irradia al hombro y aumenta al elevar el brazo por encima del nivel de la cabeza; así como se mitiga con calor.</string>
    <string name="text_exploration">Exploración física</string>
</resources>