<?xml version="1.0" encoding="utf-8"?>
<layout>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_sign_in"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.vazquez.proyectouaq.SignInActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/background"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin">

        <ImageView
            android:layout_width="168dp"
            android:layout_height="147dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/size_logo"
            android:src="@drawable/logologin"
            />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:textColor="@color/color_text_white"
            android:textColorHint="@color/color_text_white"

            />

        <EditText
            android:id="@+id/password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:textColor="@color/color_text_white"
            android:textColorHint="@color/color_text_white"
            />

        <!--Buttons login -->
        <FrameLayout
            android:id="@+id/btn_login"
            android:layout_width="300dp"
            android:layout_height="56dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="64dp"
            android:background="@drawable/sign_in_btn"
            android:clickable="true"
            android:elevation="4dp"
            android:foreground="?selectableItemBackground"
            android:onClick="load"
            tools:ignore="OnClick">

            <TextView
                android:id="@+id/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-light"
                android:text="@string/btn_login"
                android:textColor="#ffffff" />

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_gravity="center"
                android:visibility="invisible" />
        </FrameLayout>



        <!--<Button
            android:id="@+id/btn_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@color/colorAccent"
            android:text="@string/btn_login"
            android:textColor="@color/color_text_black"
            />
            -->

        <!--Fin del boton login-->
        <Button
            android:id="@+id/btn_reset_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-50dip"
            android:background="@null"
            android:text="@string/btn_forgot_pass"
            android:textAllCaps="false"
            android:textColor="@color/color_text_white"
            />
        <!--button link to login screen-->
        <Button
            android:id="@+id/btn_signup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@null"
            android:text="@string/btn_link_to_register"
            />

    </LinearLayout>

   <!-- <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center|bottom"
        android:visibility="gone"
        tools:layout_editor_absoluteX="142dp"
        tools:layout_editor_absoluteY="142dp" />
        -->
    <ViewAnimator
        android:id="@+id/reveal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        android:visibility="invisible" />
</RelativeLayout>
</layout>