<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/propuesta"
    tools:context="com.example.vazquez.proyectouaq.MenuTwo">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@color/colorPrimaryDark2"
                android:gravity="bottom"
                android:text="Caso clinico 2    "
                android:textAlignment="center"
                android:textColor="#91c8d6"
                android:textSize="22sp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="260dp"
                android:gravity="bottom"
                android:background="@color/white"
                android:backgroundTint="@color/color_degra"
                android:text="@string/text_case2"
                android:textAlignment="center"
                android:textColor="#0a0a09"
                android:textSize="16sp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:gravity="bottom"
                android:backgroundTint="@color/color_degra"
                android:text="@string/text_exploration"
                android:textAlignment="center"
                android:textColor="#376273"
                android:textStyle="bold"
                android:textSize="22sp" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1"
                android:gravity="center">

                <TextView
                    android:layout_width="300dp"
                    android:layout_height="300dp"

                    android:background="@color/white"
                    android:backgroundTint="@color/color_degra"
                    android:text="@string/text_exploration_two"
                    android:textAlignment="center"
                    android:textColor="#09090a"
                    android:textSize="16sp" />

                <ImageButton
                    android:id="@+id/crafts"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:backgroundTint="@color/color_degra"
                    android:onClick="nextActivityCase2"
                    android:src="@drawable/cuestionary" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
